--- a/bank_automat/transactpage.ui
+++ b/bank_automat/transactpage.ui
@@ -49,8 +49,8 @@ QLabel:focus
   <widget class="QPushButton" name="Btn_Takaisin">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>420</y>
+     <x>40</x>
+     <y>530</y>
      <width>211</width>
      <height>31</height>
     </rect>
@@ -77,6 +77,16 @@ background-color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>TILITAPAHTUMAT</string>
+   </property>
+  </widget>
+  <widget class="QListView" name="accountEventsScreen">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>90</y>
+     <width>591</width>
+     <height>431</height>
+    </rect>
    </property>
   </widget>
  </widget>
