--- a/bank_automat/withdrawpage.ui
+++ b/bank_automat/withdrawpage.ui
@@ -47,7 +47,7 @@ QLabel:focus
   <widget class="QPushButton" name="insert_20euros">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>90</x>
      <y>170</y>
      <width>81</width>
      <height>61</height>
@@ -69,7 +69,7 @@ background-color:white;
   <widget class="QPushButton" name="insert_100euros">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>190</x>
      <y>250</y>
      <width>81</width>
      <height>61</height>
@@ -91,8 +91,8 @@ background-color:white;
   <widget class="QPushButton" name="Btn_Takaisin">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>400</y>
+     <x>90</x>
+     <y>440</y>
      <width>211</width>
      <height>31</height>
     </rect>
@@ -108,7 +108,7 @@ background-color: rgb(255, 255, 255);</string>
   <widget class="QPushButton" name="insert_80euros">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>90</x>
      <y>250</y>
      <width>81</width>
      <height>61</height>
@@ -130,7 +130,7 @@ background-color:white;
   <widget class="QWidget" name="gridLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>530</x>
      <y>80</y>
      <width>301</width>
      <height>321</height>
@@ -445,41 +445,12 @@ background-color:white;
       </property>
      </widget>
     </item>
-    <item row="3" column="3">
-     <widget class="QPushButton" name="Btn_OK_3">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>80</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="baseSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-background-color: rgb(52, 225, 13);</string>
-      </property>
-      <property name="text">
-       <string>OK</string>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="insert_50euros">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>290</x>
      <y>170</y>
      <width>81</width>
      <height>61</height>
@@ -501,7 +472,7 @@ background-color:white;
   <widget class="QPushButton" name="insert_40euros">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>190</x>
      <y>170</y>
      <width>81</width>
      <height>61</height>
@@ -523,7 +494,7 @@ background-color:white;
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>80</x>
      <y>50</y>
      <width>301</width>
      <height>41</height>
@@ -539,7 +510,7 @@ background-color:white;
   <widget class="QPushButton" name="insert_150euros">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>290</x>
      <y>250</y>
      <width>81</width>
      <height>61</height>
@@ -561,7 +532,7 @@ background-color:white;
   <widget class="QTextEdit" name="insert_Amount">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>90</x>
      <y>100</y>
      <width>291</width>
      <height>51</height>
@@ -575,6 +546,40 @@ color : gray;
 	border-color: black;
 	border-width: 2px;
 	border-radius: 5px;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Btn_Debit">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>436</y>
+     <width>261</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">selection-color: rgb(0, 170, 255);
+background-color: lightblue;</string>
+   </property>
+   <property name="text">
+    <string>DEBIT NOSTO</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Btn_Credit">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>470</y>
+     <width>259</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">selection-color: rgb(0, 170, 255);
+background-color: lightgreen;</string>
+   </property>
+   <property name="text">
+    <string>CREDIT NOSTO</string>
    </property>
   </widget>
  </widget>
